# test_ci_cd

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake-multi-platform.yml
